销售工具-客户下单页面完成。

--- a/static/html/template.html
+++ b/static/html/template.html
@@ -7,7 +7,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <link rel="icon" type="image/png" sizes="16x16" href="../plugins/images/favicon.png">
-      <title>首页 - 绿地系统后台</title>
+      <title>绿地系统后台</title>
       <!-- Bootstrap Core CSS -->
       <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
       <!-- Menu CSS -->
@@ -104,7 +104,7 @@
                   <li>
                      <a href="#" class="waves-effect"><i class="linea-icon linea-basic fa-fw" data-icon="&#xe005;"></i> <span class="hide-menu">销售工具<span class="fa arrow"></span> <span class="label label-rouded label-custom pull-right">4</span></span></a>
                      <ul class="nav nav-second-level">
-                        <li> <a href="xsgg_khxd.html">客户下单</a> </li>
+                        <li> <a href="#">客户下单</a> </li>
                         <li> <a href="#">查看设计师</a> </li>
                         <li> <a href="#">用户进程跟踪</a> </li>
                      </ul>
@@ -177,11 +177,12 @@
             <div class="container-fluid">
                <div class="row bg-title">
                   <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                     <h4 class="page-title">首页</h4>
+                     <h4 class="page-title">客户下单</h4>
                   </div>
                   <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
                      <ol class="breadcrumb">
-                        <li class="active">首页</li>
+                        <li><a href="#">销售工具</a></li>
+                        <li class="active">客户下单</li>
                      </ol>
                   </div>
                   <!-- /.col-lg-12 -->
