--- a/static/html/index.html
+++ b/static/html/index.html
@@ -51,7 +51,6 @@
                </div>
                <ul class="nav navbar-top-links navbar-left hidden-xs">
                   <li><a href="javascript:void(0)" class="open-close hidden-xs waves-effect waves-light"><i class="icon-arrow-left-circle ti-menu"></i></a></li>
-                  <li class="hidden-xs"><a href="javascript:void(0)">New</a></li>
                </ul>
                <ul class="nav navbar-top-links navbar-right pull-right">
                   <li>
@@ -73,13 +72,12 @@
                      <div><img src="../plugins/images/users/varun.jpg" alt="user-img" class="img-circle"></div>
                      <a href="#" class="dropdown-toggle u-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">欢迎&nbsp;&nbsp;用户名<span class="caret"></span></a>
                      <ul class="dropdown-menu animated flipInY">
-                        <li><a href="#"><i class="ti-user"></i> My Profile</a></li>
-                        <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
-                        <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
+                        <li><a href="#"><i class="ti-user"></i> 个人信息</a></li>
+                        <li><a href="#"><i class="ti-wallet"></i> 待办事项</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
+                        <li><a href="#"><i class="ti-settings"></i> 帐号设置</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-power-off"></i> Logout</a></li>
+                        <li><a href="login.html"><i class="fa fa-power-off"></i> 登出</a></li>
                      </ul>
                   </div>
                </div>
@@ -127,7 +125,7 @@
                      <a href="#" class="waves-effect"><i data-icon="/" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">装修合同管理<span class="fa arrow"></span> <span class="label label-rouded label-info pull-right">13</span> </span></a>
                      <ul class="nav nav-second-level">
                         <li><a href="#">创建合同</a></li>
-                        <li><a href="#">查询合同</a></li>
+                        <li><a href="#">合同查询</a></li>
                      </ul>
                   </li>
                  <!-- 装修合同管理 -->
@@ -136,7 +134,8 @@
                   <li>
                      <a href="#" class="waves-effect"><i data-icon="o" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">套餐内容管理<span class="fa arrow"></span></span></a>
                      <ul class="nav nav-second-level">
-                        <li><a href="#">待定</a></li>
+                        <li><a href="#">套餐配置</a></li>
+                        <li><a href="#">套餐基础信息</a></li>
                      </ul>
                   </li>
                  <!-- 套餐内容管理 -->
@@ -145,7 +144,9 @@
                  <li>
                    <a href="#" class="waves-effect"><i data-icon="&#xe008;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">员工管理<span class="fa arrow"></span></span></a>
                    <ul class="nav nav-second-level">
-                     <li><a href="#">待定</a></li>
+                     <li><a href="#">门店管理</a></li>
+                     <li><a href="#">员工账户管理</a></li>
+                     <li><a href="#">角色权限管理</a></li>
                    </ul>
                  </li>
                  <!-- 员工管理 -->
@@ -164,10 +165,28 @@
                  <li>
                    <a href="#" class="waves-effect"><i data-icon="&#xe011;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">工长管理<span class="fa arrow"></span></span></a>
                    <ul class="nav nav-second-level">
-                     <li><a href="#">待定</a></li>
+                     <li><a href="#">工长</a></li>
                    </ul>
                  </li>
                  <!-- 工长管理 -->
+
+                 <!-- 材料采购管理 -->
+                 <li>
+                   <a href="#" class="waves-effect"><i data-icon="&#xe013;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">材料采购管理(二期)</span></a>
+                 </li>
+                 <!-- 材料采购管理 -->
+
+                 <!-- 装修进程APP管理 -->
+                 <li>
+                   <a href="#" class="waves-effect"><i data-icon="&#xe013;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">装修进程APP管理(二期)</span></a>
+                 </li>
+                 <!-- 装修进程APP管理 -->
+
+                 <!-- 管理层报表汇总 -->
+                 <li>
+                   <a href="#" class="waves-effect"><i data-icon="&#xe013;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">管理层报表汇总(二期)</span></a>
+                 </li>
+                 <!-- 管理层报表汇总 -->
                </ul>
             </div>
          </div>
