--- a/static/html/xsgg_khxd.html
+++ b/static/html/xsgg_khxd.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" sizes="16x16" href="../plugins/images/favicon.png">
-  <title>客户下单 - 绿地系统后台</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
+  <title>绿地诚品家用户信息管理系统</title>
   <!-- Bootstrap Core CSS -->
   <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Menu CSS -->
@@ -40,18 +40,17 @@
     <div class="navbar-header">
       <a class="navbar-toggle hidden-sm hidden-md hidden-lg " href="javascript:void(0)" data-toggle="collapse" data-target=".navbar-collapse"><i class="ti-menu"></i></a>
       <div class="top-left-part">
-        <a class="logo" href="index.html">
+        <a class="logo" href="#">
           <b>
-            <!--This is dark logo icon--><img src="../plugins/images/pixeladmin-logo.png" alt="home" class="dark-logo" /><!--This is light logo icon--><img src="../plugins/images/pixeladmin-logo-dark.png" alt="home" class="light-logo" />
+            <!--This is dark logo icon--><img src="images/lvdi_logo.png" alt="home" class="dark-logo" /><!--This is light logo icon--><img src="images/lvdi_logo.png" alt="home" class="light-logo" />
           </b>
           <span class="hidden-xs">
-                        <!--This is dark logo text--><img src="../plugins/images/pixeladmin-text.png" alt="home" class="dark-logo" /><!--This is light logo text--><img src="../plugins/images/pixeladmin-text-dark.png" alt="home" class="light-logo" />
-                     </span>
+            <!--This is dark logo text--><img src="images/lvdi_logo_text.png" alt="home" class="dark-logo" /><!--This is light logo text--><img src="images/lvdi_logo_text.png" width="150px" alt="home" class="light-logo" />
+         </span>
         </a>
       </div>
       <ul class="nav navbar-top-links navbar-left hidden-xs">
         <li><a href="javascript:void(0)" class="open-close hidden-xs waves-effect waves-light"><i class="icon-arrow-left-circle ti-menu"></i></a></li>
-        <li class="hidden-xs"><a href="javascript:void(0)">New</a></li>
       </ul>
       <ul class="nav navbar-top-links navbar-right pull-right">
         <li>
@@ -66,20 +65,19 @@
     <!-- /.navbar-static-side -->
   </nav>
   <!-- Left navbar-header -->
-  <div class="navbar-default sidebar" role="navigation">
+  <div class="navbar-default sidebar " role="navigation">
     <div class="sidebar-nav navbar-collapse slimscrollsidebar">
       <div class="user-profile">
         <div class="dropdown user-pro-body">
           <div><img src="../plugins/images/users/varun.jpg" alt="user-img" class="img-circle"></div>
-          <a href="#" class="dropdown-toggle u-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">欢迎&nbsp;&nbsp;用户名<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle u-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">欢迎&nbsp;&nbsp;管理员<span class="caret"></span></a>
           <ul class="dropdown-menu animated flipInY">
-            <li><a href="#"><i class="ti-user"></i> My Profile</a></li>
-            <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
-            <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
+            <li><a href="#"><i class="ti-user"></i> 个人信息</a></li>
+            <li><a href="#"><i class="ti-wallet"></i> 待办事项</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
+            <li><a href="#"><i class="ti-settings"></i> 帐号设置</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="login.html"><i class="fa fa-power-off"></i> Logout</a></li>
+            <li><a href="login.html"><i class="fa fa-power-off"></i> 登出</a></li>
           </ul>
         </div>
       </div>
@@ -96,7 +94,7 @@
 
         <!-- 首页 -->
         <li>
-          <a href="index.html" class="waves-effect active"><i class="linea-icon linea-basic fa-fw" data-icon="z"></i> <span class="hide-menu">首页</span></a>
+          <a href="#" class="waves-effect active"><i class="linea-icon linea-basic fa-fw" data-icon="z"></i> <span class="hide-menu">首页</span></a>
         </li>
         <!-- 首页 -->
 
@@ -104,7 +102,7 @@
         <li>
           <a href="#" class="waves-effect"><i class="linea-icon linea-basic fa-fw" data-icon="&#xe005;"></i> <span class="hide-menu">销售工具<span class="fa arrow"></span> <span class="label label-rouded label-custom pull-right">4</span></span></a>
           <ul class="nav nav-second-level">
-            <li> <a href="#">客户下单</a> </li>
+            <li> <a href="xsgg_khxd.html">客户下单</a> </li>
             <li> <a href="#">查看设计师</a> </li>
             <li> <a href="#">用户进程跟踪</a> </li>
           </ul>
@@ -127,7 +125,7 @@
           <a href="#" class="waves-effect"><i data-icon="/" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">装修合同管理<span class="fa arrow"></span> <span class="label label-rouded label-info pull-right">13</span> </span></a>
           <ul class="nav nav-second-level">
             <li><a href="#">创建合同</a></li>
-            <li><a href="#">查询合同</a></li>
+            <li><a href="#">合同查询</a></li>
           </ul>
         </li>
         <!-- 装修合同管理 -->
@@ -136,7 +134,8 @@
         <li>
           <a href="#" class="waves-effect"><i data-icon="o" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">套餐内容管理<span class="fa arrow"></span></span></a>
           <ul class="nav nav-second-level">
-            <li><a href="#">待定</a></li>
+            <li><a href="#">套餐配置</a></li>
+            <li><a href="#">套餐基础信息</a></li>
           </ul>
         </li>
         <!-- 套餐内容管理 -->
@@ -145,7 +144,9 @@
         <li>
           <a href="#" class="waves-effect"><i data-icon="&#xe008;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">员工管理<span class="fa arrow"></span></span></a>
           <ul class="nav nav-second-level">
-            <li><a href="#">待定</a></li>
+            <li><a href="#">门店管理</a></li>
+            <li><a href="#">员工账户管理</a></li>
+            <li><a href="#">角色权限管理</a></li>
           </ul>
         </li>
         <!-- 员工管理 -->
@@ -164,10 +165,28 @@
         <li>
           <a href="#" class="waves-effect"><i data-icon="&#xe011;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">工长管理<span class="fa arrow"></span></span></a>
           <ul class="nav nav-second-level">
-            <li><a href="#">待定</a></li>
+            <li><a href="#">工长信息管理</a></li>
           </ul>
         </li>
         <!-- 工长管理 -->
+
+        <!-- 材料采购管理 -->
+        <li>
+          <a href="#" class="waves-effect"><i data-icon="&#xe013;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">材料采购管理(二期)</span></a>
+        </li>
+        <!-- 材料采购管理 -->
+
+        <!-- 装修进程APP管理 -->
+        <li>
+          <a href="#" class="waves-effect"><i data-icon="&#xe013;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">装修进程APP(二期)</span></a>
+        </li>
+        <!-- 装修进程APP管理 -->
+
+        <!-- 管理层报表汇总 -->
+        <li>
+          <a href="#" class="waves-effect"><i data-icon="&#xe013;" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">管理层报表汇总(二期)</span></a>
+        </li>
+        <!-- 管理层报表汇总 -->
       </ul>
     </div>
   </div>
@@ -203,7 +222,7 @@
               <div class="input-group">
                 <input type="text" class="form-control" id="userphone" placeholder="输入联系电话...">
                 <span class="input-group-btn">
-                <button type="button" class="btn waves-effect waves-light btn-danger">检测手机</button>
+                <button type="button" class="btn waves-effect waves-light btn-danger" alt="default" data-toggle="modal" data-target=".bs-example-modal-sm">检测手机</button>
                 </span>
               </div>
               <div class="help-block with-errors"></div>
@@ -282,10 +301,26 @@
 
     </div>
     <!-- /.container-fluid -->
-    <footer class="footer text-center"> 2016 &copy; Pixel Admin brought to you by themedesigner.in </footer>
+    <footer class="footer text-center"> 2016 &copy; Copy Right </footer>
   </div>
   <!-- /#page-wrapper -->
 </div>
+
+<!-- sample modal content -->
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="display: none;">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title" id="mySmallModalLabel">检测结果</h4>
+      </div>
+      <div class="modal-body"> 输入的手机号未查询到匹配用户 </div>
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 <!-- /#wrapper -->
 <!-- jQuery -->
 <script src="../plugins/bower_components/jquery/dist/jquery.min.js"></script>
@@ -306,6 +341,18 @@
 <!-- Date Picker Plugin JavaScript -->
 <script src="../plugins/bower_components/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
 <script>
+  $(document).ready(function () {
+    $.toast({
+      heading: '欢迎登录'
+      , text: '用户:管理员  已登录绿地诚品家用户信息管理系统'
+      , position: 'top-right'
+      , loaderBg: '#ff6849'
+      , icon: 'info'
+      , hideAfter: 3500
+      , stack: 6
+    })
+  });
+
   jQuery('.mydatepicker').datepicker({
     language: 'cn',
     autoclose: true,
