--- a/static/html/khxx_khcx.html
+++ b/static/html/khxx_khcx.html
@@ -100,7 +100,7 @@
 
         <!-- 销售工具 -->
         <li>
-          <a href="#" class="waves-effect active"><i class="linea-icon linea-basic fa-fw" data-icon="&#xe005;"></i> <span class="hide-menu">销售工具<span class="fa arrow"></span> <span class="label label-rouded label-custom pull-right">4</span></span></a>
+          <a href="#" class="waves-effect"><i class="linea-icon linea-basic fa-fw" data-icon="&#xe005;"></i> <span class="hide-menu">销售工具<span class="fa arrow"></span> <span class="label label-rouded label-custom pull-right">4</span></span></a>
           <ul class="nav nav-second-level">
             <li> <a href="xsgg_khxd.html">客户下单</a> </li>
             <li> <a href="#">查看设计师</a> </li>
@@ -111,10 +111,10 @@
 
         <!-- 客户信息管理 -->
         <li>
-          <a href="#" class="waves-effect"><i data-icon=")" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">客户信息管理<span class="fa arrow"></span><span class="label label-rouded label-danger pull-right">New</span></span></a>
+          <a href="#" class="waves-effect active"><i data-icon=")" class="linea-icon linea-basic fa-fw"></i> <span class="hide-menu">客户信息管理<span class="fa arrow"></span><span class="label label-rouded label-danger pull-right">New</span></span></a>
           <ul class="nav nav-second-level">
             <li><a href="#">创建客户</a></li>
-            <li><a href="khxx_khcx.html">客户查询</a></li>
+            <li><a href="#">客户查询</a></li>
             <li><a href="#">销售进度查询</a></li>
           </ul>
         </li>
@@ -196,12 +196,12 @@
     <div class="container-fluid">
       <div class="row bg-title">
         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-          <h4 class="page-title">客户下单</h4>
+          <h4 class="page-title">客户查询</h4>
         </div>
         <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
           <ol class="breadcrumb">
-            <li><a href="#">销售工具</a></li>
-            <li class="active">客户下单</li>
+            <li><a href="#">客户信息管理</a></li>
+            <li class="active">客户查询</li>
           </ol>
         </div>
         <!-- /.col-lg-12 -->
@@ -209,118 +209,139 @@
 
       <!-- /.row -->
       <div class="row">
-        <div class="col-sm-12 col-lg-10">
+        <div class="col-sm-12">
           <div class="white-box">
-            <div class="form-group">
-              <label for="username" class="control-label">用户姓名</label>
-              <input type="text" class="form-control" id="username" placeholder="输入用户姓名...">
-              <div class="help-block with-errors"></div><!-- 表单验证错误,form-group标签中添加has-error -->
-            </div>
-
-            <div class="form-group">
-              <label for="userphone" class="control-label">联系电话</label>
-              <div class="input-group">
-                <input type="text" class="form-control" id="userphone" placeholder="输入联系电话...">
-                <span class="input-group-btn">
-                <button type="button" class="btn waves-effect waves-light btn-danger" alt="default" data-toggle="modal" data-target=".bs-example-modal-sm">检测手机</button>
-                </span>
+            <!-- 顶部输入框 -->
+            <div class="row">
+              <div class="col-sm-5">
+                <div class="form-group">
+                  <label for="username" class="control-label">用户姓名</label>
+                  <input type="text" class="form-control" id="username" placeholder="输入用户姓名...">
+                  <div class="help-block with-errors"></div><!-- 表单验证错误,form-group标签中添加has-error -->
+                </div>
               </div>
-              <div class="help-block with-errors"></div>
+              <div class="col-sm-7">
+                <div class="form-group">
+                  <label for="userphone" class="control-label">联系电话</label>
+                  <div class="input-group">
+                    <input type="text" class="form-control" id="userphone" placeholder="输入联系电话...">
+                    <span class="input-group-btn">
+                      <button type="button" class="btn waves-effect waves-light btn-danger" alt="default">查询</button>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
+            <!-- 顶部输入框 -->
 
-            <div class="form-group">
-              <label>性别</label>
-              <select class="form-control">
-                <option>男</option>
-                <option>女</option>
-              </select>
+            <!-- 筛选tab -->
+            <ul class="nav customtab nav-tabs" role="tablist">
+              <li role="presentation" class="active"><a href="#" role="tab" data-toggle="tab" aria-expanded="true"><span class="visible-xs"><i class="ti-home"></i></span><span class="hidden-xs">全部</span></a></li>
+              <li role="presentation" class=""><a href="#" role="tab" data-toggle="tab" aria-expanded="false"><span class="visible-xs"><i class="ti-user"></i></span> <span class="hidden-xs">首付款已付</span></a></li>
+              <li role="presentation" class=""><a href="#" role="tab" data-toggle="tab" aria-expanded="false"><span class="visible-xs"><i class="ti-email"></i></span> <span class="hidden-xs">装修中</span></a></li>
+              <li role="presentation" class=""><a href="#" role="tab" data-toggle="tab" aria-expanded="false"><span class="visible-xs"><i class="ti-settings"></i></span> <span class="hidden-xs">尾款已付</span></a></li>
+              <li role="presentation" class=""><a href="#" role="tab" data-toggle="tab" aria-expanded="false"><span class="visible-xs"><i class="ti-signal"></i></span> <span class="hidden-xs">未签约</span></a></li>
+            </ul>
+            <!-- 筛选tab -->
+            <div class="table-responsive m-t-15">
+              <table class="table color-table primary-table table-hover table-bordered">
+                <thead>
+                <tr>
+                  <th>客户名称</th>
+                  <th>手机号</th>
+                  <th>城市</th>
+                  <th>房型</th>
+                  <th>合同签订日期</th>
+                  <th>销售</th>
+                  <th>合同状态</th>
+                  <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><i class="fa fa-female"></i>&nbsp;&nbsp;徐爱红</td>
+                    <td>18938276333</td>
+                    <td>上海</td>
+                    <td>两室一厅</td>
+                    <td><i class="fa fa-clock-o"></i>&nbsp;&nbsp;2016-11-15</td>
+                    <td>张兰</td>
+                    <td>新签</td>
+                    <td><button type="button" class="btn btn-info btn-xs">销售进度</button> <button type="button" class="btn btn-success btn-xs">查看合同</button></td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-female"></i>&nbsp;&nbsp;李红</td>
+                    <td>18738948372</td>
+                    <td>上海</td>
+                    <td>两室一厅</td>
+                    <td><i class="fa fa-clock-o"></i>&nbsp;&nbsp;2016-11-15</td>
+                    <td>张兰</td>
+                    <td>首付已付</td>
+                    <td><button type="button" class="btn btn-info btn-xs">销售进度</button> <button type="button" class="btn btn-success btn-xs">查看合同</button></td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-male"></i>&nbsp;&nbsp;张一山</td>
+                    <td>13524498337</td>
+                    <td>上海</td>
+                    <td>三室两厅</td>
+                    <td><i class="fa fa-clock-o"></i>&nbsp;&nbsp;2016-10-05</td>
+                    <td>张兰</td>
+                    <td>装修中</td>
+                    <td><button type="button" class="btn btn-info btn-xs">销售进度</button> <button type="button" class="btn btn-success btn-xs">查看合同</button></td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-male"></i>&nbsp;&nbsp;钱学森</td>
+                    <td>13524498337</td>
+                    <td>杭州</td>
+                    <td>三室两厅</td>
+                    <td><i class="fa fa-clock-o"></i>&nbsp;&nbsp;2016-09-28</td>
+                    <td>张兰</td>
+                    <td>装修中</td>
+                    <td><button type="button" class="btn btn-info btn-xs">销售进度</button> <button type="button" class="btn btn-success btn-xs">查看合同</button></td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-male"></i>&nbsp;&nbsp;张德江</td>
+                    <td>13524498337</td>
+                    <td>上海</td>
+                    <td>三室两厅</td>
+                    <td><i class="fa fa-clock-o"></i>&nbsp;&nbsp;2016-09-25</td>
+                    <td>张兰</td>
+                    <td>装修中</td>
+                    <td><button type="button" class="btn btn-info btn-xs">销售进度</button> <button type="button" class="btn btn-success btn-xs">查看合同</button></td>
+                  </tr>
+                  <tr>
+                    <td><i class="fa fa-female"></i>&nbsp;&nbsp;董明珠</td>
+                    <td>17717536253</td>
+                    <td>上海</td>
+                    <td>叠加两层</td>
+                    <td><i class="fa fa-clock-o"></i>&nbsp;&nbsp;2016-09-02</td>
+                    <td>张兰</td>
+                    <td>装修中</td>
+                    <td><button type="button" class="btn btn-info btn-xs">销售进度</button> <button type="button" class="btn btn-success btn-xs">查看合同</button></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-
-            <div class="form-group">
-              <label for="createname" class="control-label">创建人</label>
-              <input type="text" class="form-control" id="createname" placeholder="输入创建人姓名...">
-            </div>
-            <div class="form-group">
-              <label for="designer" class="control-label">设计师</label>
-              <input type="text" class="form-control" id="designer" placeholder="输入设计师姓名...">
-            </div>
-
-            <div class="form-group">
-              <label>客户级别</label>
-              <select class="form-control">
-                <option>一般客户</option>
-                <option>内部客户</option>
-                <option>VIP</option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <label>签订日期</label>
-              <div class="input-group">
-                <input type="text" class="form-control mydatepicker" placeholder="yyyy年mm月dd日">
-                <span class="input-group-addon"><i class="icon-calender"></i></span> </div>
-            </div>
-
-            <div class="form-group">
-              <label>房型</label>
-              <select class="form-control">
-                <option>两室一厅</option>
-                <option>三室两厅</option>
-                <option>叠加两层</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="buildingname" class="control-label">楼盘名称</label>
-              <input type="text" class="form-control" id="buildingname" placeholder="输入楼盘名称...">
-            </div>
-            <div class="form-group">
-              <label for="buildingaddress" class="control-label">楼盘地址</label>
-              <input type="text" class="form-control" id="buildingaddress" placeholder="输入楼盘地址...">
-            </div>
-            <div class="form-group">
-              <label for="areameasure" class="control-label">套内面积</label>
-              <input type="text" class="form-control" id="areameasure" placeholder="输入楼盘地址...">
-            </div>
-            <div class="form-group">
-              <label>套餐选择</label>
-              <select class="form-control">
-                <option>A套餐</option>
-                <option>B套餐</option>
-                <option>C套餐</option>
-              </select>
-            </div>
-
-            <button type="submit" class="btn btn-success waves-effect waves-light m-r-10">提交</button>
-            <button type="submit" class="btn btn-inverse waves-effect waves-light">取消</button>
+            <ul class="pagination m-b-0">
+              <li> <a href="#"><i class="fa fa-angle-left"></i></a> </li>
+              <li> <a href="#">1</a> </li>
+              <li class="active"> <a href="#">2</a> </li>
+              <li> <a href="#">3</a> </li>
+              <li> <a href="#">4</a> </li>
+              <li> <a href="#">5</a> </li>
+              <li> <a href="#"><i class="fa fa-angle-right"></i></a> </li>
+            </ul>
           </div>
-
-        </div>
         </div>
       </div>
-      <!--row -->
-
     </div>
-    <!-- /.container-fluid -->
-    <footer class="footer text-center"> 2016 &copy; Copy Right </footer>
-  </div>
-  <!-- /#page-wrapper -->
-</div>
+    <!--row -->
 
-<!-- sample modal content -->
-<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" style="display: none;">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h4 class="modal-title" id="mySmallModalLabel">检测结果</h4>
-      </div>
-      <div class="modal-body"> 输入的手机号未查询到匹配用户 </div>
-    </div>
-    <!-- /.modal-content -->
   </div>
-  <!-- /.modal-dialog -->
+  <!-- /.container-fluid -->
+  <footer class="footer text-center"> 2016 &copy; Copy Right </footer>
 </div>
-<!-- /.modal -->
+<!-- /#page-wrapper -->
+</div>
 <!-- /#wrapper -->
 <!-- jQuery -->
 <script src="../plugins/bower_components/jquery/dist/jquery.min.js"></script>
@@ -340,25 +361,10 @@
 <script src="../plugins/bower_components/toast-master/js/jquery.toast.js"></script>
 <!-- Date Picker Plugin JavaScript -->
 <script src="../plugins/bower_components/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-<script>
-  $(document).ready(function () {
-    $.toast({
-      heading: '欢迎登录'
-      , text: '用户:管理员  已登录绿地诚品家用户信息管理系统'
-      , position: 'top-right'
-      , loaderBg: '#ff6849'
-      , icon: 'info'
-      , hideAfter: 3500
-      , stack: 6
-    })
-  });
 
-  jQuery('.mydatepicker').datepicker({
-    language: 'cn',
-    autoclose: true,
-    format: "yyyy年mm月dd日",
-    todayHighlight: true
-  });
+
+<script>
+  $('#example23').DataTable();
 </script>
 </body>
 </html>
