--- a/static/html/xsgg_khxd.html
+++ b/static/html/xsgg_khxd.html
@@ -69,7 +69,7 @@
     <div class="sidebar-nav navbar-collapse slimscrollsidebar">
       <div class="user-profile">
         <div class="dropdown user-pro-body">
-          <div><img src="../plugins/images/users/varun.jpg" alt="user-img" class="img-circle"></div>
+          <div><img src="images/avater.png" alt="user-img" class="img-circle"></div>
           <a href="#" class="dropdown-toggle u-dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">欢迎&nbsp;&nbsp;管理员<span class="caret"></span></a>
           <ul class="dropdown-menu animated flipInY">
             <li><a href="#"><i class="ti-user"></i> 个人信息</a></li>
